third_party/move/move-compiler-v2/tests/file-format-generator/immutable_attr_invalid.exp

Diagnostics:
error: attribute `#[immutable]` cannot be applied to native functions
  ┌─ tests/file-format-generator/immutable_attr_invalid.move:5:16
  │
5 │     native fun native_fn(): u64;
  │                ^^^^^^^^^

error: attribute `#[immutable]` cannot be applied to inline functions
  ┌─ tests/file-format-generator/immutable_attr_invalid.move:9:16
  │
9 │     inline fun inline_fn(): u64 { 42 }
  │                ^^^^^^^^^
